# Personal-Notes-Archive

./: README.md  audio.py  pyproject.toml  sip_call_recorded.py  test.py  w-x.py  zzzz.py
1.notes/: kenny.md
1.notes/auth/: ai_exop.md  ic.md  ip.md  langchain_aws.md  messy.md  must_have.md  resume.md
1.notes/instruction/: git.md  k8s.md
1.notes/interview/: zexam.md
1.notes/study/: langchain.md  prompts.md  python.md
1.notes/web/: w.md
1.notes/work/: recode.md
2.python/classes/: timeutils.py
2.python/crewai/job-posting/: agents.py  job_posting.md  main.py
2.python/crewai/medi_helper/: agents.py  main.py  tasks.py
auth/: resume.md
crewapp/: crew.py  gamemaker.json  gamemaker.yaml  gapp.yaml  medihelper.yaml  storymaker.yaml
crewapp/tools/: __init__.py  health_tools.py
deploy/: config  docker.md  k8s.md  zexam.md
llm/: anew.md  langchain.md  llm.md  prompts.md
oneclass/: api-key-22XMJX6EIJI5TL2T.txt  auth.md  edu-tech-prompt-tuning.py  prompt.md  toml.py  yetta_chen_credentials.csv
oneclass/metting/: 0613.md  0623.md  0704.md
oneclass/study/: poetry.md
python/: backend.md  python.md
test/: crew.py  main.py  zcrew.py
test/agents/: game.py  weekly.yaml
test/tasks/: game.py  weekly.yaml
test/tools/: __init__.py  browser.py  search.py
work/: adventech.md  aps.md  go.md  report-edge-.md  state.md
