[tool.poetry]
name = "gen-ai-mms-rag"
version = "0.1.0"
description = ""
authors = ["LisaChen <yetta_chen@oneclass.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
streamlit = "1.35.0"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.5"
python-docx = "^1.1.2"
watchdog = "^4.0.1"
pandas = "^2.2.2"
unstructured = "0.14.5"
python-pptx = "^0.6.23"
pypdf = "^4.2.0"
faiss-cpu = "^1.8.0"
python-dotenv = "^1.0.1"
pymongo = "^4.7.3"
mongodbproxy = "^0.1.0"
langchain-google-community = "^1.0.6"
googlemaps = "^4.10.0"
pypdf2 = "^3.0.1"
apscheduler = "^3.10.4"
boto3 = "^1.34.144"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
google-cloud-speech = "^2.26.1"
google-cloud-storage = "^2.17.0"
langchain-google-vertexai = "1.0.5"
networkx = "^3.3"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"